Moved js to wwwroot

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,13 +4,13 @@
 <header class="p-5 mb-5 bg-dark text-white rounded-bottom">
     <div class="container-fluid">
         <h4 class="display-4 fw-bold">
-            Active products
+            Card view
         </h4>
         <p class="fs-4">
-            Latest products found in NoSQL container.
+            Card view of products found in NoSQL container.
         </p>
         <a class="btn btn-outline-light btn-lg" asp-page="/products">
-            View all products
+            List view
         </a>        
     </div>
 </header>
