--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -53,6 +53,11 @@
                         <i class="bi bi-speedometer2"></i>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/addproduct">
+                        <i class="bi bi-speedometer2"></i>
+                    </a>
+                </li>
                <!-- <li class="nav-item">
                     <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/about">
                         <i class="bi bi-info-circle"></i>
