--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -40,6 +40,7 @@
             <th scope="col">Name</th>
             <th scope="col">SKU</th>
             <th scope="col">Category</th>
+            <th scope="col">CategoryID</th>
             <th scope="col">Description</th>
             <th scope="col">Price</th>
         </tr>
@@ -66,6 +67,9 @@
                 </td>
                 <td>
                     @item.categoryName
+                </td>
+                <td>
+                    @item.categoryId
                 </td>
                 <td>
                     <small>
