Updated icons and edit logic

--- a/Pages/AddProduct.cshtml
+++ b/Pages/AddProduct.cshtml
@@ -7,6 +7,10 @@
         <input type="text" id="name" asp-for="Product.name" />
     </div>
     <div>
+        <label for="categoryId">Category ID:</label>
+        <input type="text" id="categoryId" asp-for="Product.categoryId" />
+    </div>
+    <div>
         <label for="description">Description:</label>
         <input type="text" id="description" asp-for="Product.description" />
     </div>
