--- a/Pages/EditProduct.cshtml
+++ b/Pages/EditProduct.cshtml
@@ -7,6 +7,10 @@
         <input type="text" id="name" asp-for="Product.id" />
     </div>
     <div>
+        <label for="categoryId">Existing Category ID:</label>
+        <input type="text" id="categoryId" asp-for="Product.categoryId" />
+    </div>
+    <div>
         <label for="name">Name:</label>
         <input type="text" id="name" asp-for="Product.name" />
     </div>
@@ -15,8 +19,8 @@
         <input type="text" id="description" asp-for="Product.description" />
     </div>
     <div>
-        <label for="categoryId">Category ID:</label>
-        <input type="text" id="categoryId" asp-for="Product.categoryId" />
+        <label for="categoryId">New Category ID:</label>
+        <input type="text" id="NewCategoryId" asp-for="NewCategoryId" />
     </div>
     <div>
         <label for="categoryName">Category Name:</label>
