--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -50,12 +50,17 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/products">
-                        <i class="bi bi-speedometer2"></i>
+                        <i class="bi bi-clipboard-data"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/addproduct">
-                        <i class="bi bi-speedometer2"></i>
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/editproduct">
+                        <i class="bi bi-pen"></i>
                     </a>
                 </li>
                <!-- <li class="nav-item">
