--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -59,6 +59,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/deleteproduct">
+                        <i class="bi bi-eraser"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/editproduct">
                         <i class="bi bi-pen"></i>
                     </a>
