Fixed form issue on product edit

--- a/Pages/DeleteProduct.cshtml
+++ b/Pages/DeleteProduct.cshtml
@@ -8,7 +8,7 @@
 <form method="post">
     <table>
         <tr>
-            <td><label for="name">ID:</label></td>
+            <td><label for="name">Product ID:</label></td>
             <td><input type="text" id="ProductID" asp-for="ProductID" /></td>
         </tr>
         <tr>
