--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet" integrity="sha256-8M+b2Hj+vy/2J5tZ9pYDHeuPD59KsaEZn1XXj3xVhjg=" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+
 </head>
 <body class="vh-100 d-flex flex-column justify-content-start">
     <nav class="navbar navbar-dark bg-dark">
@@ -44,36 +53,32 @@
         <div class="d-flex flex-column flex-shrink-0 bg-dark">
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
                 <li class="nav-item">
-                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/Index">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/Index" data-toggle="tooltip" title="Home">
                         <i class="bi bi-house-door"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/products">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/products" data-toggle="tooltip" title="Products">
                         <i class="bi bi-clipboard-data"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/addproduct">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/addproduct" data-toggle="tooltip" title="Add Product">
                         <i class="bi bi-plus-circle-fill"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/deleteproduct">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/deleteproduct" data-toggle="tooltip" title="Delete Product">
                         <i class="bi bi-eraser"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/editproduct">
+                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/editproduct" data-toggle="tooltip" title="Edit Product">
                         <i class="bi bi-pen"></i>
                     </a>
                 </li>
-               <!-- <li class="nav-item">
-                    <a class="nav-link link-light py-3 border-bottom rounded-0" current-route current-route-class="active" asp-page="/about">
-                        <i class="bi bi-info-circle"></i>
-                    </a>
-                 </li>-->
             </ul>
+
         </div>
         <article class="container pb-2">
             @RenderBody()
