--- a/Pages/DeleteProduct.cshtml
+++ b/Pages/DeleteProduct.cshtml
@@ -4,6 +4,9 @@
     td {
         padding-right: 20px;
     }
+    form {
+        margin-left: -5%;
+    }
 </style>
 <form method="post">
     <table>
