--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -4,8 +4,7 @@
     const int lowPrice = 100;
     const int highPrice = 1000;
 }
-
-<!-- Add an input field for live search -->
+<div class="mainProductPageClass">
 <input type="text" id="searchInput" class="form-control" placeholder="Search products" />
 
 <table class="table table-sm table-bordered mt-2">
@@ -83,6 +82,6 @@
         }
     </tbody>
 </table>
-
+</div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="~/js/live-search.js"></script>
