--- a/Pages/DeleteProduct.cshtml
+++ b/Pages/DeleteProduct.cshtml
@@ -1,26 +1,19 @@
 ﻿@page
 @model DeleteProductModel
-<style>
-    td {
-        padding-right: 20px;
-    }
-    form {
-        margin-left: -5%;
-    }
-</style>
+<br />
 <form method="post">
     <table>
         <tr>
-            <td><label for="name">Product ID:</label></td>
-            <td><input type="text" id="ProductID" asp-for="ProductID" /></td>
+            <td class="tdSpace"><label for="name">Product ID:</label></td>
+            <td class="tdSpace"><input type="text" id="ProductID" asp-for="ProductID" /></td>
         </tr>
         <tr>
-            <td><label for="categoryId">Category ID:</label></td>
-            <td><input type="text" id="CategoryID" asp-for="CategoryID" /></td>
+            <td class="tdSpace"><label for="categoryId">Category ID:</label></td>
+            <td class="tdSpace"><input type="text" id="CategoryID" asp-for="CategoryID" /></td>
         </tr>
     </table>
     <br />
     <div>
-        <button type="submit">Delete Product</button>
+        <button type="submit" class="delete-button">Delete Product</button>
     </div>
 </form>
