--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
             </ul>
 
         </div>
-        <article class="container pb-2">
+        <article class="customMainContainer pb-2">
             @RenderBody()
         </article>
     </main>
