--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -1,3 +1,101 @@
-﻿.mainProductPageClass {
-    margin-left: -10%;
+﻿.customMainContainer {
+    width: 85%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.mainProductPageClass {
+    margin-top: 3%;
+    /*    margin-left: -10%;*/
+}
+/*.container-fluid {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    padding: 10px;
+    background-color: #343a40
+}
+.d-flex flex-column flex-shrink-0 bg-dark {
+    position: fixed;
+    top: 0;
+    left: 0;
+}*/
+
+.tdSpace {
+    padding-right: 20px;
+}
+
+.sticky-header {
+    position: sticky;
+    top: 0; /* Stick the headers to the top */
+    background-color: #f5f5f5; /* Add a background color to make them stand out */
+    z-index: 1; /* Ensure the headers appear above the content */
+}
+
+.productTableContainer {
+    max-height: 900px;
+    max-width: 100%;
+    overflow-y: auto;
+}
+
+
+.delete-button {
+    background-color: #cf4336;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+    .delete-button:hover {
+        background-color: #505050;
+    }
+
+.edit-button {
+    background-color: #0072ff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+    .edit-button:hover {
+        background-color: #505050;
+    }
+
+.add-button {
+    background-color: #009f11;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+    .add-button:hover {
+        background-color: #505050;
+    }
+
+
+#fixedSearchInput {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 998;
+    background-color: #343a40;
+    margin-top: 3%;
+    margin-left: 2.6%;
 }
