--- a/Pages/DeleteProduct.cshtml
+++ b/Pages/DeleteProduct.cshtml
@@ -5,11 +5,11 @@
     <table>
         <tr>
             <td class="tdSpace"><label for="name">Product ID:</label></td>
-            <td class="tdSpace"><input type="text" id="ProductID" asp-for="ProductID" /></td>
+            <td class="tdSpace"><input type="text" id="ProductID" asp-for="ProductID" required /></td>
         </tr>
         <tr>
             <td class="tdSpace"><label for="categoryId">Category ID:</label></td>
-            <td class="tdSpace"><input type="text" id="CategoryID" asp-for="CategoryID" /></td>
+            <td class="tdSpace"><input type="text" id="CategoryID" asp-for="CategoryID" required /></td>
         </tr>
     </table>
     <br />
