--- a/Pages/EditProduct.cshtml
+++ b/Pages/EditProduct.cshtml
@@ -6,11 +6,11 @@
     
     <tr>
         <td class="tdSpace"><label for="name">Existing Product ID:</label></td>
-        <td class="tdSpace"><input type="text" id="name" asp-for="Product.id" /></td>
+            <td class="tdSpace"><input type="text" id="name" asp-for="Product.id" required /></td>
     </tr>
     <tr>
         <td class="tdSpace"><label for="categoryId">Existing Category ID:</label></td>
-        <td class="tdSpace"><input type="text" id="categoryId" asp-for="Product.categoryId" /></td>
+            <td class="tdSpace"><input type="text" id="categoryId" asp-for="Product.categoryId" required /></td>
     </tr>
     <tr>
         <td colspan="2"><hr /></td>
