--- a/Pages/EditProduct.cshtml
+++ b/Pages/EditProduct.cshtml
@@ -42,7 +42,13 @@
    
 </table>
 <br />
-<div>
-    <button type="submit" class="edit-button">Edit Product</button>
-</div>
+    @if (!Model.ProductExists)
+    {
+        <div class="alert alert-danger" role="alert">
+            Product not found.
+        </div>
+    }
+    <div>
+        <button type="submit" class="edit-button">Edit Product</button>
+    </div>
 </form>
