Added Login, Logout, Create Account, and username in layout. Overhauled startup and made minor visual changes

--- a/Pages/AddProduct.cshtml
+++ b/Pages/AddProduct.cshtml
@@ -2,6 +2,8 @@
 @model AddProductModel
 <form method="post">
     <br />
+    <h2>Add Product</h2>
+    <br />
     <table>
         <tr>
             <td class="tdSpace"><label for="name">Name:</label></td>
@@ -33,5 +35,3 @@
         <button type="submit" class="add-button">Add Product</button>
     </div>
 </form>
-
-<!--</div>-->
