--- a/Pages/CreateAccount.cshtml
+++ b/Pages/CreateAccount.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model CreateAccountModel
-
+<br />
+<h2>Create Account</h2>
+<br />
 <form method="post">
     <table>
         <tr>
@@ -17,3 +19,8 @@
         <button type="submit" class="add-button">Create Account</button>
     </div>
 </form>
+
+<hr />
+<div class="mt-3">
+    <p>Already have an account? <a href="/login">Login</a></p>
+</div>
