--- a/Pages/DeleteProduct.cshtml
+++ b/Pages/DeleteProduct.cshtml
@@ -1,6 +1,10 @@
 ﻿@page
 @model DeleteProductModel
-<br />
+<div>
+    <br />
+    <h2>Delete Product</h2>
+    <br />
+</div>
 <form method="post">
     <table>
         <tr>
