--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -2,6 +2,9 @@
 @model CosmicWorksTest2.Pages.LoginModel
 @{
 }
+<br />
+<h2>Login</h2>
+<br />
 <form method="post">
     <table>
         <tr>
@@ -18,3 +21,8 @@
         <button type="submit" class="add-button">Log In</button>
     </div>
 </form>
+
+<hr />
+<div class="mt-3">
+    <p>Don't have an account? <a href="/createaccount">Create Account</a></p>
+</div>
