--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CosmicWorksTest2
 @using CosmicWorksTest2.Models
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Mvc.Authorization
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @namespace CosmicWorksTest2.Pages
 @addTagHelper *, CosmicWorksTest2
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
