--- a/Pages/EditProduct.cshtml
+++ b/Pages/EditProduct.cshtml
@@ -47,7 +47,7 @@
     @if (!Model.ProductExists)
     {
         <div class="alert alert-danger" role="alert">
-            Product not found.
+            Product not found
         </div>
     }
     <div>
