--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -20,7 +20,7 @@
     @if (!Model.LoggedInSuccessful)
     {
         <div class="alert alert-danger" role="alert">
-            Username or Password incorrect.
+            Username or password incorrect
         </div>
     }
     <div>
