--- a/Pages/DeleteProduct.cshtml
+++ b/Pages/DeleteProduct.cshtml
@@ -20,7 +20,7 @@
     @if (!Model.ProductExists)
     {
         <div class="alert alert-danger" role="alert">
-            Product not found.
+            Product not found
         </div>
     }
     <div>
