--- a/Pages/CreateAccount.cshtml
+++ b/Pages/CreateAccount.cshtml
@@ -11,7 +11,7 @@
         </tr>
         <tr>
             <td class="tdSpace"><label for="password">Password:</label></td>
-            <td class="tdSpace"><input type="text" id="password" asp-for="CosmosUser.password" required /></td>
+            <td class="tdSpace"><input type="password" id="password" asp-for="CosmosUser.password" required /></td>
         </tr>
     </table>
     <br />
